--- a/index.html
+++ b/index.html
@@ -52,12 +52,12 @@
     <p>위대한 인물들의 루틴을 따라하는 루틴 관리 앱</p>
 
     <!-- 앱스토어 다운로드 버튼 -->
-    <a class="button" href="https://apps.apple.com/app/idYOUR_APP_ID" target="_blank">
+    <a class="button" href="https://apps.apple.com/kr/app/minigenius/id6751554428" target="_blank">
       📲 App Store에서 다운로드
     </a>
 
     <!-- FAQ 버튼 -->
-    <a class="button secondary" href="https://www.notion.so/네_FAQ_URL" target="_blank">
+    <a class="button secondary" href="https://www.notion.so/MiniGenius-FAQ-25c17c72ed57805fbf47fd4bf16e095b?source=copy_link" target="_blank">
       ❓ FAQ 바로가기
     </a>
   </body>
