--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
   <body>
     <header>
       <h1>MiniGenius</h1>
-      <p>위대한 인물들의 루틴을 따라하는 루틴 관리 앱</p>
+      <p>천재들의 루틴으로 하루를 바꾸다, 자기계발 일상 루틴앱</p>
 
       <!-- 앱스토어 다운로드 버튼 -->
       <a class="button" href="https://apps.apple.com/kr/app/minigenius/id6751554428" target="_blank">
