--- a/index.html
+++ b/index.html
@@ -72,12 +72,18 @@
 
       <!-- 앱스토어 다운로드 버튼 -->
       <a class="button" href="https://apps.apple.com/kr/app/minigenius/id6751554428" target="_blank">
-        📲 App Store에서 다운로드
+        📲 App Store (Korea)
+      </a>
+      <a class="button" href="https://apps.apple.com/us/app/minigenius/id6751554428" target="_blank">
+        📲 App Store (US)
       </a>
 
       <!-- FAQ 버튼 -->
       <a class="button secondary" href="https://www.notion.so/MiniGenius-FAQ-25c17c72ed57805fbf47fd4bf16e095b?source=copy_link" target="_blank">
-        ❓ FAQ 바로가기
+        ❓ FAQ - 한국어
+      </a>
+      <a class="button secondary" href="https://www.notion.so/MiniGenius-FAQ-Frequently-Asked-Questions-26517c72ed5780648934e330162fba0b?source=copy_link" target="_blank">
+        ❓ FAQ - English
       </a>
     </header>
 
