--- a/index.html
+++ b/index.html
@@ -76,6 +76,7 @@
     <header>
       <h1>MiniGenius</h1>
       <p>천재들의 루틴으로 하루를 바꾸다, 자기계발 일상 루틴앱</p>
+      <p>Transform Your Day with the Routines of Geniuses</p>
 
       <!-- 한국 줄 -->
       <div class="button-row">
