--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
       <!-- 영어 줄 -->
       <div class="button-row">
         <a class="button" href="https://apps.apple.com/app/minigenius/id6751554428" target="_blank">
-          📲 App Store (US)
+          📲 App Store (EN)
         </a>
         <a class="button secondary" href="https://www.notion.so/MiniGenius-FAQ-Frequently-Asked-Questions-26517c72ed5780648934e330162fba0b?source=copy_link" target="_blank">
           ❓ FAQ - English
